2013-01-06  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2013-01-03  Uros Bizjak  <ubizjak@gmail.com>

	PR target/55712
	* config/i386/i386-c.c (ix86_target_macros_internal): Depending on
	selected code model, define __code_mode_small__, __code_model_medium__,
	__code_model_large__, __code_model_32__ or __code_model_kernel__.
	* config/i386/cpuid.h (__cpuid, __cpuid_count) [__i386__]: Prefix
	xchg temporary register with %k.  Declare temporary register as
	early clobbered.
	[__x86_64__]: For medium and large code models, preserve %rbx register.

2013-01-03  Richard Henderson  <rth@redhat.com>

	* config/i386/i386.c (ix86_expand_move): Always assign to op1
	after eliminating TLS symbols.

2013-01-03  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/53789
	* config/pa/pa.md (movsi): Revert previous change.
	* config/pa/pa.c (pa_legitimate_constant_p): Reject all TLS symbol
	references.

2013-01-02  Rainer Emrich  <rainer@emrich-ebersheim.de>

	PR bootstrap/55707
	* graphite-dependences.c (hash_poly_ddr_p): Cast from pointer via
	intptr_t.

2013-01-02  Jason Merrill  <jason@redhat.com>

	PR c++/55804
	* tree.c (build_array_type_1): Revert earlier change.

2012-12-25  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR target/53789
	* config/pa/pa.md (movsi): Reject expansion of TLS symbol references
	after reload starts.

2012-12-21  Martin Jambor  <mjambor@suse.cz>

	PR tree-optimization/55355
	* tree-sra.c (type_internals_preclude_sra_p): Also check that
	bit_position is small enough to fit a single HOST_WIDE_INT.

2012-12-21  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	* config.gcc: Match arm*-*-uclinux*eabi* for EABI uCLinux.

2012-12-18  Matthew Gretton-Dann  <matthew.gretton-dann@linaro.org>

	Backport from mainline
	2012-10-15  Matthias Klose  <doko@ubuntu.com>

	* config.gcc: Match arm*-*-linux-* for ARM Linux/GNU.
	* doc/install.texi: Use arm-*-*linux-* instead of arm-*-*linux-gnueabi.
