@@ -1,3 +1,10 @@
+2013-01-07  Terry Guo  <terry.guo@arm.com>
+
+	Backport from mainline
+	2012-12-19  Terry Guo  <terry.guo@arm.com>
+
+	* gcc.target/arm/thumb-find-work-register.c: New.
+
 2013-01-06  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gnat.dg/alignment10.adb: New test.
