@@ -1,3 +1,11 @@
+2013-01-07  Terry Guo  <terry.guo@arm.com>
+
+	Backport from mainline
+	2012-12-19  Terry Guo  <terry.guo@arm.com>
+
+	* config/arm/arm.c (thumb_find_work_register): Check argument
+	register number based on current PCS.
+
 2013-01-06  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline
